# tabsnap

./: .env.example  .gitignore  README.md  dev.sh  docker-compose.yml
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/jobs/[id]/: page.tsx
apps/web/components/: AudioPlayer.tsx  ConfidenceBadge.tsx  CorrectionEditor.tsx  TabViewer.tsx  UploadBox.tsx
apps/web/public/: manifest.json  sw.js
services/api/: Dockerfile  pyproject.toml  requirements.txt
services/api/app/: main.py
services/api/app/db/: models.py  session.py
services/api/app/queue/: enqueue.py
services/api/app/routes/: corrections.py  jobs.py  results.py
services/api/app/storage/: local.py
services/worker/: Dockerfile  pyproject.toml  requirements.txt  worker.py
services/worker/pipeline/: beat.py  confidence.py  export.py  fingerprint.py  midi_to_tab.py  normalize.py  separate.py  transcribe.py
