[project]
name = "tabsnap-worker"
version = "0.1.0"
description = "TabSnap audio processing worker"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "rq>=1.16",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "basic-pitch>=0.3",
    "librosa>=0.10",
    "pretty-midi>=0.2",
    "soundfile>=0.12",
    "numpy>=1.26",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
